feat: Added svg image and html markup for modal'

--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="style.css">
   <title>Modal</title>
 </head>
 
 <body>
 
+  <main>
+    <div class="wrap">
+      <button class="button">Click me</button>
+      <svg class="point-hand" viewBox="0 0 58 66">
+        <use xlink:href="images/sprite.svg#point-hand">
+        </use>
+      </svg>
+    </div>
+  </main>
+
+
+  <div class="modal">
+    <div class="modal__content">
+      <svg class="wave-hand" width="112" height="139" viewBox="0 0 112 139">
+        <use xlink:href="images/sprite.svg#wave-hand">
+      </svg>
+      <button class="modal__close-button">
+        <svg width="1em" height="1em" viewBox="0 0 18 18">
+          <use xlink:href="images/sprite.svg#close">
+        </svg>
+      </button>
+    </div>
+  </div>
 
 </body>
 
