fear: Added javascript functionality, and added class jsModalClose with styles

--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Modal</title>
-
+  <link rel="stylesheet" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Modal</title>
 </head>
 
 <body>
 
   <main>
     <div class="wrap">
-      <button class="button">Click me</button>
+      <button class="button jsModalButton">Click me</button>
       <svg class="point-hand" viewBox="0 0 58 66">
         <use xlink:href="images/sprite.svg#point-hand">
         </use>
@@ -23,20 +21,21 @@
     </div>
   </main>
 
-
-  <div class="modal">
-    <div class="modal__content">
-      <svg class="wave-hand" width="112" height="139" viewBox="0 0 112 139">
-        <use xlink:href="images/sprite.svg#wave-hand">
-      </svg>
-      <button class="modal__close-button">
-        <svg width="1em" height="1em" viewBox="0 0 18 18">
-          <use xlink:href="images/sprite.svg#close">
+  <div class="modal-overlay jsModalOverlay">
+    <div class="modal">
+      <div class="modal__content">
+        <svg class="wave-hand" width="112" height="139" viewBox="0 0 112 139">
+          <use xlink:href="images/sprite.svg#wave-hand">
         </svg>
-      </button>
+        <button class="modal__close-button jsModalClose">
+          <svg width="1em" height="1em" viewBox="0 0 18 18">
+            <use xlink:href="images/sprite.svg#close">
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
-
+  <script src="js/main.js"></script>
 </body>
 
 </html>
